# machine-learning-project

./: .gitignore  .pylintrc  PAPER_README.md  PAPER_SUMMARY.md  README.md  compile_paper.sh  main.ipynb  paper.tex  pyproject.toml  requirements.txt
article/: .gitignore  README.md  article.tex  compile_paper.sh
configs/: exphormer_molhiv.yaml  exphormer_zinc.yaml  gcn_virtualnode_zinc.yaml  gin_zinc.yaml  goat_molhiv.yaml  goat_molpcba.yaml  goat_zinc.yaml
experiments/: compare_all_models molhiv.ipynb  compare_all_models molpcba.ipynb  compare_all_models zinc.ipynb  compare_all_models.ipynb  test_new_features.ipynb  train_exphormer.py  train_goat.py  train_model.py
juliusz/: EXPERIMENT_PLAN.md  QUICK_START_EXPERIMENTS.md  ROADMAP.md  SETUP_COMPLETE.md  START_HERE.md
juliusz/configs/: .gitkeep
juliusz/experiments/: train_exphormer.py  train_goat.py
juliusz/models/: __init__.py  base.py  goat.py  layers.py
juliusz/notebooks/: .gitkeep  benchmark_comparison.ipynb  quick_test.ipynb
juliusz/training/: __init__.py  trainer.py
juliusz/utils/: __init__.py  metrics.py
models/: __init__.py  base.py  baselines.py  exphormer.py  goat.py  hybrid.py  layers.py
notebooks/: DIAGNOSTIC_FIX.md  benchmark_comparison.ipynb  full_model_comparison.ipynb
paper/: PAPER_README.md  compile_paper.sh
report/: PAPER_README.md  compile_paper.sh  paper.tex
src/models/baselines/: gat.py  (+1 more)
src/utils/: __init__.py  analysis.py  complexity.py  constants.py  data.py  load_model.py  metrics.py  models.py  positional_encodings.py  training.py
training/: config.py  trainer.py
(+1 files in other folders)
